--- a/package.json
+++ b/package.json
@@ -25,11 +25,13 @@
     "bootstrap": "^4.2.1",
     "chart.js": "^2.5.0",
     "core-js": "^2.5.4",
+    "file-saver": "^2.0.1",
     "font-awesome": "^4.7.0",
     "hammerjs": "^2.0.8",
     "mongoose": "^5.4.19",
     "rxjs": "^6.0.0",
     "rxjs-compat": "^6.4.0",
+    "xlsx": "^0.14.2",
     "zone.js": "~0.8.26"
   },
   "devDependencies": {
