--- a/package.json
+++ b/package.json
@@ -23,13 +23,16 @@
     "@ng-bootstrap/ng-bootstrap": "^4.0.2",
     "@types/node": "^8.10.45",
     "angular-bootstrap-md": "^7.4.3",
+    "bcrypt": "^3.0.6",
     "bootstrap": "^4.2.1",
     "chart.js": "^2.5.0",
     "core-js": "^2.5.4",
     "file-saver": "^2.0.1",
     "font-awesome": "^4.7.0",
     "hammerjs": "^2.0.8",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.4.19",
+    "passport": "^0.4.0",
     "rxjs": "^6.0.0",
     "rxjs-compat": "^6.4.0",
     "xlsx": "^0.14.2",
@@ -58,10 +61,10 @@
   },
   "browser": {
     "http": false,
-    "https":false,
+    "https": false,
     "net": false,
     "path": false,
     "stream": false,
     "tls": false
-}
+  }
 }
