--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
     "file-saver": "^2.0.1",
     "font-awesome": "^4.7.0",
     "hammerjs": "^2.0.8",
-    "mongoose": "^5.4.19",
+    "mongoose": "^5.5.2",
+    "multer": "^1.4.1",
     "rxjs": "^6.0.0",
     "rxjs-compat": "^6.4.0",
     "xlsx": "^0.14.2",
