--- a/package.json
+++ b/package.json
@@ -20,9 +20,12 @@
     "@angular/platform-browser": "^6.1.0",
     "@angular/platform-browser-dynamic": "^6.1.0",
     "@angular/router": "^6.1.0",
+    "@auth0/angular-jwt": "^1.0.0-beta.11",
     "@ng-bootstrap/ng-bootstrap": "^4.0.2",
+    "@nguniversal/express-engine": "^7.1.1",
     "@types/node": "^8.10.45",
     "angular-bootstrap-md": "^7.4.3",
+    "angular2-cookie": "^1.2.6",
     "bcrypt": "^3.0.6",
     "bootstrap": "^4.2.1",
     "chart.js": "^2.5.0",
@@ -32,8 +35,9 @@
     "hammerjs": "^2.0.8",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.4.19",
-    "passport": "^0.4.0",
     "multer": "^1.4.1",
+    "ngx-cookie": "^4.1.2",
+    "passport": "^0.4.0",
     "rxjs": "^6.0.0",
     "rxjs-compat": "^6.4.0",
     "xlsx": "^0.14.2",
